--- a/src/imperugo.corsi.flashmobile.common/imperugo.corsi.flashmobile.common.csproj
+++ b/src/imperugo.corsi.flashmobile.common/imperugo.corsi.flashmobile.common.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="1.1.2" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.3.0" />
   </ItemGroup>
 
