--- a/src/imperugo.corsi.flashmobile.services/imperugo.corsi.flashmobile.services.csproj
+++ b/src/imperugo.corsi.flashmobile.services/imperugo.corsi.flashmobile.services.csproj
@@ -9,7 +9,7 @@
 
 	<ItemGroup>
 		<Folder Include="Configuration\" />
-		<Folder Include="wwwroot\" />
+		<Folder Include="wwwroot\Uploads\Chats\Avatars\" />
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.0.0" />
